--- a/src/app/Components/post/post.component.scss
+++ b/src/app/Components/post/post.component.scss
@@ -6,6 +6,7 @@
   -ms-transition: 0.3s;
   -o-transition: 0.3s;
   padding: 1rem;
+  //   width: 400px;
   &:hover {
     box-shadow: 10px 10px 15px #ccc;
   }
@@ -18,6 +19,8 @@
       overflow: hidden;
     }
     .info {
+      overflow-wrap: anywhere;
+        // flex: 1;
       // background-color: red;
     }
   }
