--- a/src/app/Pages/user-page/user-page.component.html
+++ b/src/app/Pages/user-page/user-page.component.html
@@ -1,3 +1,5 @@
-<section class="posts">
-  <app-post *ngFor="let item of [1, 2, 3, 4, 5, 6, 7]"></app-post>
+<section class="posts p-2">
+  <div class="post" *ngFor="let item of [1, 2, 3, 4, 5, 6, 7]">
+    <app-post></app-post>
+  </div>
 </section>
