Create User Service and call Api

--- a/src/app/Components/comment/comment.component.html
+++ b/src/app/Components/comment/comment.component.html
@@ -1,6 +1,6 @@
 <section class="comment-box d-flex gap-2 border-top py-2">
   <div class="user-avatar">
-    <img src="https://picsum.photos/200/200" class="img-fluid" />
+    <img src="https://picsum.photos/200/200" class="img-fluid"  loading="lazy" />
   </div>
   <div class="comment">
     <h6 class="small m-0">User Name</h6>
