--- a/src/app/Components/post/post.component.html
+++ b/src/app/Components/post/post.component.html
@@ -20,7 +20,11 @@
     }}
   </div>
   <div>
-    <img src="https://picsum.photos/1200/600" class="post-image" />
+    <img
+      src="https://picsum.photos/1200/600"
+      class="post-image"
+      loading="lazy"
+    />
   </div>
   <div
     class="footer d-flex align-items-center flex-wrap justify-content-center justify-content-sm-between gap-0 ga-md-2"
