--- a/src/app/Pages/user-page/user-page.component.html
+++ b/src/app/Pages/user-page/user-page.component.html
@@ -1,5 +1,5 @@
 <section class="posts p-2">
-  <div class="post" *ngFor="let item of [1, 2, 3, 4, 5, 6, 7]">
-    <app-post></app-post>
+  <div class="post" *ngFor="let post of posts">
+    <app-post [postInfo]="post"></app-post>
   </div>
 </section>
