Show Username on Post

--- a/src/app/Pages/user-page/user-page.component.html
+++ b/src/app/Pages/user-page/user-page.component.html
@@ -1,5 +1,5 @@
 <section class="posts p-2">
   <div class="post" *ngFor="let post of posts">
-    <app-post [postInfo]="post"></app-post>
+    <app-post [postInfo]="post" [userDetails]="userDetails"></app-post>
   </div>
 </section>
