--- a/src/app/Components/navbar/navbar.component.html
+++ b/src/app/Components/navbar/navbar.component.html
@@ -24,7 +24,7 @@
             >Home</a
           >
         </li>
-        <li class="nav-item" *ngFor="let user of users">
+        <li class="nav-item" *ngFor="let user of users$ | async">
           <a
             class="nav-link"
             aria-current="page"
