--- a/src/app/Components/post/post.component.html
+++ b/src/app/Components/post/post.component.html
@@ -8,7 +8,7 @@
       <img class="img-fluid" src="https://picsum.photos/200/200" />
     </div>
     <div class="info">
-      <h6 class="m-0">{{ userDetails?.name }}</h6>
+      <h6 class="m-0">{{ userDetails?.username }}</h6>
       <span class="text-muted small">{{ userDetails?.email }}</span>
     </div>
   </div>
