--- a/src/app/Pages/user-page/user-page.component.html
+++ b/src/app/Pages/user-page/user-page.component.html
@@ -1,5 +1,10 @@
 <section class="posts p-2">
-  <div class="post" *ngFor="let post of posts">
-    <app-post [postInfo]="post" [userDetails]="userDetails"></app-post>
-  </div>
+  <ng-container *ngIf="isLoading; else mainContent">
+    <app-loading></app-loading>
+  </ng-container>
+  <ng-template #mainContent>
+    <div class="post" *ngFor="let post of posts">
+      <app-post [postInfo]="post" [userDetails]="userDetails"></app-post>
+    </div>
+  </ng-template>
 </section>
