--- a/src/app/Components/navbar/navbar.component.html
+++ b/src/app/Components/navbar/navbar.component.html
@@ -14,7 +14,7 @@
       <span class="navbar-toggler-icon"></span>
     </button>
     <div class="collapse navbar-collapse" id="navbarSupportedContent">
-      <ul class="navbar-nav ms-auto mb-2 mb-lg-0 flex-wrap ">
+      <ul class="navbar-nav ms-auto mb-2 mb-lg-0 flex-wrap">
         <li class="nav-item">
           <a
             class="nav-link"
@@ -24,7 +24,7 @@
             >Home</a
           >
         </li>
-        <li class="nav-item" *ngFor="let user of users$ | async">
+        <li class="nav-item" *ngFor="let user of users">
           <a
             class="nav-link"
             aria-current="page"
