--- a/src/app/Components/navbar/navbar.component.html
+++ b/src/app/Components/navbar/navbar.component.html
@@ -1,7 +1,9 @@
-<nav class="navbar navbar-expand-lg bg-body-tertiary" data-bs-theme="dark">
+<nav
+  class="navbar navbar-expand-lg bg-body-tertiary slide-down  "
+  data-bs-theme=""
+>
   <div class="container-fluid">
-    <!-- Change Routerlink -->
-    <a class="navbar-brand" routerLink="">Vodafone</a>
+    <a class="navbar-brand text-danger" routerLink="">Vodafone</a>
     <button
       class="navbar-toggler"
       type="button"
