--- a/src/app/Pages/home/home.component.html
+++ b/src/app/Pages/home/home.component.html
@@ -1,1 +1,4 @@
-<p>home works!</p>
+<div class="home p-1 d-flex  w-100 justify-content-center  align-items-center flex-column gap-2 zoomIn ">
+    <h3 class="text-danger">Vodafone Task</h3>
+    <h4>Simple Blog</h4>
+</div>
